<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.studentconnect.discretemath.MainActivity" >
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/hello_world" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/gcd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/lcm" />

    <Button
        android:text="@string/dijkstra"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/box"
        />

</LinearLayout>
